apps/sftpgo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sftpgo
  namespace: sftpgo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sftpgo
  template:
    metadata:
      labels:
        app: sftpgo
    spec:
      nodeSelector:
        affected_vlan: "50"
      containers:        
        - name: sftpgo
          image: ghcr.io/drakkan/sftpgo:v2.7.6@sha256:1edd28d80de2a008863fbfc58c8ff7db47b1b410bae48d4e6076192337809b11
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 2022
            - containerPort: 2021
          volumeMounts:
            - name: sftpgo-home-volume
              mountPath: /var/lib/sftpgo
            - name: sftpgo-data-volume
              mountPath: /srv/sftpgo
            - name: shared-consume-volume
              mountPath: /mnt/paperless-consume
            - name: cert-volume
              mountPath: /etc/sftpgo/certs
              readOnly: true
      volumes:
        - name: sftpgo-home-volume
          persistentVolumeClaim:
            claimName: sftpgo-home-pvc
        - name: sftpgo-data-volume
          persistentVolumeClaim:
            claimName: sftpgo-data-pvc        
        - name: shared-consume-volume         
          persistentVolumeClaim:
            claimName: shared-consume-pvc
        - name: cert-volume
          secret:
            secretName: local-cert
