apps/sftpgo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftpgo
  namespace: sftpgo
  labels:
    app: sftpgo
  annotations:
    io.cilium/lb-ipam-ips: "sftpgo-pool"
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: sftp
    port: 2022
    targetPort: 2022
  - name: ftp-control
    protocol: TCP
    port: 2121            
    targetPort: 2121
  - name: ftp-passive-0
    protocol: TCP
    port: 50000
    targetPort: 50000
  - name: ftp-passive-1
    protocol: TCP
    port: 50001
    targetPort: 50001
  - name: ftp-passive-2
    protocol: TCP
    port: 50002
    targetPort: 50002
  - name: ftp-passive-3
    protocol: TCP
    port: 50003
    targetPort: 50003
  - name: ftp-passive-4
    protocol: TCP
    port: 50004
    targetPort: 50004
  selector:
    app: sftpgo
